# osy-prog-demo

./: README.md
cmake-demo/: CMakeLists.txt  Makefile  README.md  main.cpp
exec-demo/: exec_cmd.cpp  exec_test.cpp  fork_pipe_exec.cpp  fork_pipe_in_out.cpp
fork-pipe-demo/: pipe_data.cpp
lib-demo/lib_a/: Makefile  lib_test  lib_test.cpp  module_1.cpp  module_2.cpp  modules.h
lib-demo/lib_so/: Makefile  lib_test  module_1.cpp
makefile-demo/: Makefile
msg-posix-demo/: msg_posix_test.cpp
sem-posix-demo/: sem_posix_test.cpp
shm-posix-demo/: shm_posix_test.cpp
socket-demo/: socket_cl.cpp  socket_srv.cpp
thread-demo/: cond_test.cpp  mutex_test.cpp  pthread_test.cpp
